2. can add & remove books

--- a/src/components/book/BookcaseComponent.style.scss
+++ b/src/components/book/BookcaseComponent.style.scss
@@ -2,7 +2,10 @@
 // ☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰☰
 .BookcaseComponentContainer {
 
-
   // ☰☰☰☰☰☰ (|  nested styles  |) ☰☰☰☰☰☰
-
+  .image {
+    position: relative;
+    right: 0.7rem;
+    border-radius: 8px;
+  }
 }
